--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "perpustakaan",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js"
@@ -12,9 +12,13 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.19.2",
+    "moment-timezone": "^0.5.45",
     "mysql2": "^3.10.0",
     "nodemon": "^3.1.3",
+    "pg": "^8.12.0",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.3",
-    "sequelize-cli": "^6.6.2"
+    "sequelize-cli": "^6.6.2",
+    "swagger-ui-express": "^5.0.1"
   }
 }
